# portfolio_site

./: .gitignore  .replit  Pasted-ERROR-routes-blog-Error-fetching-blog-posts-psycopg2-errors-UndefinedColumn-column-blog-post-auth-1727292128200.txt  Pasted-INFO-werkzeug-172-31-196-19-25-Sep-2024-21-23-13-GET-static-img-favicon-svg-HTTP-1-1-304--1727299428293.txt  add_author_id_column.py  config.py  create_admin.py  inspect_table.py  main.py  models.py  pyproject.toml  replit_zip_error_log.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.upm/: store.json
frontend/: .gitignore  firebase.json  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  firebase.js  index.css  index.js
frontend/src/components/: blogPost.js  markdownEditor.js  privateRoute.js  themeToggle.js
frontend/src/contexts/: authContext.js  themeContext.js
frontend/src/pages/: About.js  Blog.js  BlogDetail.js  Contact.js  CreateBlogPost.js  CreateProject.js  Dashboard.js  Home.js  Login.js  ProjectDetail.js  Projects.js
frontend/src/services/: authService.js  (+1 more)
routes/: __init__.py  admin.py  blog.py  main.py  projects.py
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  blog.html  blog_post.html  contact.html  index.html  project_detail.html  projects.html  search_results.html
templates/admin/: dashboard.html  login.html  post_form.html  project_form.html
(+10 files in other folders)
